manifests/dev/windmill/Deployment-windmill-worker-native.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: windmill-worker-native
    app.kubernetes.io/name: windmill-worker-native
  name: windmill-worker-native
  namespace: windmill
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: windmill-worker-native
      app.kubernetes.io/name: windmill-worker-native
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: windmill-worker-native
        app.kubernetes.io/name: windmill-worker-native
    spec:
      automountServiceAccountToken: true
      containers:
        - command:
            - /bin/sh
            - -c
            - export DATABASE_URL=$(cat /work/database_url) && exec windmill
          image: ghcr.io/windmill-labs/windmill-full:latest
          imagePullPolicy: IfNotPresent
          name: windmill-worker-native
          volumeMounts:
            - mountPath: /work
              name: windmill-db-url-work
      serviceAccountName: default
      volumes:
        - emptyDir: {}
          name: windmill-db-url-work
