manifests/dev/windmill/Deployment-windmill.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: windmill
    app.kubernetes.io/name: windmill
    app.kubernetes.io/version: latest
  name: windmill
  namespace: windmill
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: windmill
      app.kubernetes.io/name: windmill
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: windmill
        app.kubernetes.io/name: windmill
    spec:
      automountServiceAccountToken: true
      containers:
        - command:
            - /bin/sh
            - -c
            - export DATABASE_URL=$(cat /work/database_url) && exec windmill standalone
          image: ghcr.io/windmill-labs/windmill-full:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 40
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: windmill
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /work
              name: windmill-db-url-work
      serviceAccountName: default
      volumes:
        - emptyDir: {}
          name: windmill-db-url-work
