manifests/dev/windmill/Ingress-windmill.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: windmill
  namespace: windmill
spec:
  ingressClassName: traefik
  rules:
    - host: windmill.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: windmill
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - windmill.home.kronkltd.net
      secretName: windmill-tls
